added words to GTR ssections

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -9,7 +9,7 @@ Exercise is in Section \ref{sect:RB-ExerciseMain}.
 
 \subsubsection{Sequence Evolution}
 
-Point to other tutorials (e.g., GTR stuff) 
+In this tutorial, our molecular data are best analyzed with a General Time-Reversible model of sequence evolution and gamma-distributed rate heterogeneity. This model of sequence evolution is covered thoroughly in CTMC_Tutorial. 
 
 \subsubsection{Morphological Character Change}
 
