--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -584,7 +584,7 @@ As in the molecular data partition, we will allow gamma-distributed rate heterog
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 alpha_morpho ~ dnExponential( 1.0 )
-rates_morpho := fnDiscretizeGamma( alpha_morpho, alpha_morpho, 4, false )
+rates_morpho := fnDiscretizeGamma( alpha_morpho, alpha_morpho, 4 )
 
 moves[mvi++] = mvScale(alpha_morpho, lambda=0.01, weight=1.0)
 moves[mvi++] = mvScale(alpha_morpho, lambda=0.1,  weight=1.0)
